make sure color picker shows up properly on mobile

--- a/src/app/overview/overview.component.scss
+++ b/src/app/overview/overview.component.scss
@@ -6,11 +6,8 @@
 
   grid-template-columns: minmax(300px, 1fr) 3fr;
   grid-template-rows: 1fr;
-  grid-gap: 10px;
-}
 
-@media (max-width: map-get($breakpoints, sm)) {
-  .container {
+  @media (max-width: map-get($breakpoints, sm)) {
     grid-template-areas:
       "category-list"
       "link-list";
@@ -19,5 +16,9 @@
     grid-template-rows:
       auto /* category-list */
       1fr; /* link-list */
+  }
+
+  @media (min-width: map-get($breakpoints, sm)) {
+    grid-gap: 2rem;
   }
 }
